--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Nosifer&family=Yuji+Mai&display=swap"
         rel="stylesheet">
 
-    <title>Cafeteria Do Ios</title>
+    <title>Cafeteria do IOS</title>
 
 </head>
 
